--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,13 @@
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Trucks/Create">Add New Truck</a>
                             </li>
                         }
+                        @if (User.IsInRole("Client"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Troutes/Index">Book Available Trucks</a>
+                            </li>
+                   
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
