Update views to display first names instead of usernames
- Updated `_LoginPartial.cshtml` to show the first name of the logged-in user.
- Modified `BookedTrucks.cshtml` to use `BookedTruckViewModel` and display the driver's first name.
- Updated `BookedTrucks.cshtml.cs` to populate `BookedTruckViewModel` with the driver's first name.
- Changed `Index.cshtml` to display the driver's first name in the routes table.
- Updated `Index.cshtml.cs` to use `TRouteViewModel` and populate it with the driver's first name.

--- a/Pages/Troutes/BookedTrucks.cshtml
+++ b/Pages/Troutes/BookedTrucks.cshtml
@@ -3,9 +3,7 @@
 @{
     ViewData["Title"] = "Booked Trucks";
 }
-
 <h1>Booked Trucks</h1>
-
 <table class="table">
     <thead>
         <tr>
@@ -18,18 +16,17 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var booking in Model.BookedTrucks)
+        @foreach (var bookedTruck in Model.BookedTrucks)
         {
             <tr>
-                <td>@booking.Route.Origin</td>
-                <td>@booking.Route.Destination</td>
-                <td>@booking.Route.AvailableDate.ToShortDateString()</td>
-                <td>@booking.Route.Driver.UserName</td>
-                <td>@booking.Route.Description</td>
-                <td>@booking.BookingDate.ToShortDateString()</td>
+                <td>@bookedTruck.Booking.Route.Origin</td>
+                <td>@bookedTruck.Booking.Route.Destination</td>
+                <td>@bookedTruck.Booking.Route.AvailableDate.ToShortDateString()</td>
+                <td>@bookedTruck.DriverFirstName</td>
+                <td>@bookedTruck.Booking.Route.Description</td>
+                <td>@bookedTruck.Booking.BookingDate.ToShortDateString()</td>
             </tr>
         }
     </tbody>
 </table>
-
 <a asp-page="./Index" class="btn btn-secondary">Back to Available Trucks</a>
